--- a/index.html
+++ b/index.html
@@ -209,19 +209,6 @@
             <!-- SECOND BATCH -->
             <div id="b2" class="hidden-batch" style="max-height:0px;opacity:0;">
                 <div class="row">
-                    <!-- CED CABATBAT -->
-                    <div class="col reveal">
-                        <div class="user-icon">
-                            <img src="images/DP_Ced.jpg" alt="">
-                            <div class="user-name">
-                                <h4>Ced Cabatbat</h4>
-                                <span>Loyal Customer</span>
-                            </div>
-                        </div>
-                        <div class="message">
-                            <p>Eyyy geng geng! It'z yo bday 2day. Arigathanks for all the life advices!! More thirdwheeling days for me pag nagaya ule kayo ni tiw lumabas! Loyal customer pa din sa Cookies bago maging loyal sa iba 😁<br><a href="https://www.youtube.com/watch?v=tL6SQ2PGXV4" target="_blank" rel="noopener noreferrer">https://www.youtube.com/watch?v=tL6SQ2PGXV4</a></p>
-                        </div>
-                    </div>
                     <!-- JAN VILLALON -->
                     <div class="col reveal">
                         <div class="user-icon">
@@ -248,8 +235,6 @@
                             <p>Happy Birthday Thereee!!! thank you for the friendship, sana masaya date nyo ng jowa nyo on your bday. Pakiinvite na rin sa wedding, ty</p>
                         </div>
                     </div>
-                </div>
-                <div class="row">
                     <!-- Mae -->
                     <div class="col reveal">
                         <div class="user-icon">
@@ -263,6 +248,8 @@
                             <p>Happy Birthday Eret!!! Super grateful for our low maintenance friendship!! I miss you so much. see you real soon oki?? Sana maraming Gambas ang ulam mo on your bday. MWA ILY</p>
                         </div>
                     </div>
+                </div>
+                <div class="row">
                     <!-- Baba -->
                     <div class="col reveal">
                         <div class="user-icon">
@@ -274,6 +261,19 @@
                         </div>
                         <div class="message">
                             <p>HAPPY BIRTHDAY BEST B! Excited to see you glow more in your 25th year 🤍 Let's enjoy quarter life crisis togedur wahahaha love you always 💩</p>
+                        </div>
+                    </div>
+                    <!-- Cholo -->
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_Cholo.jpg" alt="">
+                            <div class="user-name">
+                                <h4>Cholo</h4>
+                                <span>Dabarkads</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p>Happy birthday Eret! May u find joy in spam, tocino and Aj. Wishing u all the best kahit mejo snob ka, Have a great one! 🎈🍻🎂</p>
                         </div>
                     </div>
                     <!-- Carl -->
@@ -350,17 +350,17 @@
                             <p>Hi, Therese! Happy Birthday! 🥳Grateful to have you as a teammate and friend. Wishing you’ll have all the good things in life because dasurv! Love you, sis ❤️</p>
                         </div>
                     </div>
+                    <!-- CED CABATBAT -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Ced.jpg" alt="">
                             <div class="user-name">
-                                <h4>Juan Pedro</h4>
-                                <span>How are you related</span>
+                                <h4>Ced Cabatbat</h4>
+                                <span>Loyal Customer</span>
                             </div>
                         </div>
                         <div class="message">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor, libero vitae
-                                lobortis maximus</p>
+                            <p>Eyyy geng geng! It'z yo bday 2day. Arigathanks for all the life advices!! More thirdwheeling days for me pag nagaya ule kayo ni tiw lumabas! Loyal customer pa din sa Cookies bago maging loyal sa iba 😁<br><a href="https://www.youtube.com/watch?v=tL6SQ2PGXV4" target="_blank" rel="noopener noreferrer">https://www.youtube.com/watch?v=tL6SQ2PGXV4</a></p>
                         </div>
                     </div>
                     <div class="col reveal">
