--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </div>
     <div id="baseNav" class="nav">
         <span onclick="openNav()">&#9776;</span>
-        <h4 class="logo unselectable">Happy Birthday, Therese!</h4>
+        <h4 class="logo unselectable">THERESE</h4>
     </div>
     <div id="scrollNav" class="nav">
         <span onclick="openNav()">&#9776;</span>
-        <h4 class="logo unselectable">Happy Birthday, Therese!</h4>
+        <h4 class="logo unselectable">THERESE</h4>
     </div>
     <!-- HOME -->
     <div id="home" class="bgimg-1">
@@ -70,7 +70,7 @@
 
     <div class="bgimg-2">
         <div class="caption unselectable">
-            <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">WALA PAKO MALAGAY HERE</span>
+            <span class="parallax-heading border">Heartfelt Birthday Wishes from Those Who Love You Dearly</span>
         </div>
     </div>
     <!-- GREETINGS SECTION -->
@@ -209,6 +209,19 @@
             <!-- SECOND BATCH -->
             <div id="b2" class="hidden-batch" style="max-height:0px;opacity:0;">
                 <div class="row">
+                    <!-- CED CABATBAT -->
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_Ced.jpg" alt="">
+                            <div class="user-name">
+                                <h4>Ced Cabatbat</h4>
+                                <span>Loyal Customer</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p>Eyyy geng geng! It'z yo bday 2day. Arigathanks for all the life advices!! More thirdwheeling days for me pag nagaya ule kayo ni tiw lumabas! Loyal customer pa din sa Cookies bago maging loyal sa iba 😁<br><a href="https://www.youtube.com/watch?v=tL6SQ2PGXV4" target="_blank" rel="noopener noreferrer">https://www.youtube.com/watch?v=tL6SQ2PGXV4</a></p>
+                        </div>
+                    </div>
                     <!-- JAN VILLALON -->
                     <div class="col reveal">
                         <div class="user-icon">
@@ -235,82 +248,28 @@
                             <p>Happy Birthday Thereee!!! thank you for the friendship, sana masaya date nyo ng jowa nyo on your bday. Pakiinvite na rin sa wedding, ty</p>
                         </div>
                     </div>
-                    <!-- Mae -->
+                </div>
+                <div class="row">
+                    <!-- BHOX -->
                     <div class="col reveal">
                         <div class="user-icon">
                             <img src="images/DP_None.png" alt="">
                             <div class="user-name">
-                                <h4>Mae</h4>
-                                <span>Aports</span>
-                            </div>
-                        </div>
-                        <div class="message">
-                            <p>Happy Birthday Eret!!! Super grateful for our low maintenance friendship!! I miss you so much. see you real soon oki?? Sana maraming Gambas ang ulam mo on your bday. MWA ILY</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <!-- Baba -->
-                    <div class="col reveal">
-                        <div class="user-icon">
-                            <img src="images/DP_Baba.jpg" alt="">
-                            <div class="user-name">
-                                <h4>Baba</h4>
-                                <span>Dabarkads</span>
-                            </div>
-                        </div>
-                        <div class="message">
-                            <p>HAPPY BIRTHDAY BEST B! Excited to see you glow more in your 25th year 🤍 Let's enjoy quarter life crisis togedur wahahaha love you always 💩</p>
-                        </div>
-                    </div>
-                    <!-- Cholo -->
-                    <div class="col reveal">
-                        <div class="user-icon">
-                            <img src="images/DP_Cholo.jpg" alt="">
-                            <div class="user-name">
-                                <h4>Cholo</h4>
-                                <span>Dabarkads</span>
-                            </div>
-                        </div>
-                        <div class="message">
-                            <p>Happy birthday Eret! May u find joy in spam, tocino and Aj. Wishing u all the best kahit mejo snob ka, Have a great one! 🎈🍻🎂</p>
-                        </div>
-                    </div>
-                    <!-- Carl -->
-                    <div class="col reveal">
-                        <div class="user-icon">
-                            <img src="images/DP_Carl.jpg" alt="">
-                            <div class="user-name">
-                                <h4>Carl</h4>
-                                <span>Dabarkads</span>
-                            </div>
-                        </div>
-                        <div class="message">
-                            <p>Happy birthday Eret!! San ang inom? Mwa</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <!-- Bhousx -->
-                    <div class="col reveal">
-                        <div class="user-icon">
-                            <img src="images/DP_Bhox.jpg" alt="">
-                            <div class="user-name">
-                                <h4>Bhousx</h4>
-                                <span>Dabarkads </span>
+                                <h4>Bhox</h4>
+                                <span>bhousx</span>
                             </div>
                         </div>
                         <div class="message">
                             <p>happy birthday bieh! slay lang pagalagi ilysm</p>
                         </div>
                     </div>
-                    <!-- Bea -->
+                    <!-- BEA -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_Bea.jpg" alt="">
+                            <img src="images/DP_None.png" alt="">
                             <div class="user-name">
                                 <h4>Bea</h4>
-                                <span>Dabarkads</span>
+                                <span>Aport</span>
                             </div>
                         </div>
                         <div class="message">
@@ -320,16 +279,56 @@
                     <!-- Franco -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_Franco.jpg" alt="">
+                            <img src="images/DP_None.png" alt="">
                             <div class="user-name">
                                 <h4>Franco</h4>
-                                <span>Dabarkads</span>
+                                <span>Jose</span>
                             </div>
                         </div>
                         <div class="message">
                             <p>Dear Therese,<br>
-                                I have watch you grown these past few years into a strong & proud woman of strong stature with an impeccable character. You deserve everything you are getting now and should not doubt a single thing given to you in this lifetime, for our time here is only borrowed. Love happily and proud. <br>
-                                xoxo</p>
+                                &nbsp&nbsp&nbsp I have watch you grown these past few years into a strong & proud woman of strong stature with an impeccable character. You deserve everything you are getting now and should not doubt a single thing given to you in this lifetime, for our time here is only borrowed. Love happily and proud.<br><br>xoxo</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_None.png" alt="">
+                            <div class="user-name">
+                                <h4>Juan Pedro</h4>
+                                <span>How are you related</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor, libero vitae
+                                lobortis maximus</p>
+                        </div>
+                    </div>
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_None.png" alt="">
+                            <div class="user-name">
+                                <h4>Juan Pedro</h4>
+                                <span>How are you related</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor, libero vitae
+                                lobortis maximus</p>
+                        </div>
+                    </div>
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_None.png" alt="">
+                            <div class="user-name">
+                                <h4>Juan Pedro</h4>
+                                <span>How are you related</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor, libero vitae
+                                lobortis maximus.</p>
                         </div>
                     </div>
                 </div>
@@ -337,30 +336,30 @@
             <!-- THIRD BATCH -->
             <div id="b3" class="hidden-batch" style="max-height:0px;opacity:0;">
                 <div class="row">
-                    <!-- Janine -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_Janine.jpg" alt="">
+                            <img src="images/DP_None.png" alt="">
                             <div class="user-name">
-                                <h4>Janine Cabrera</h4>
-                                <span>GABC</span>
+                                <h4>Juan Pedro</h4>
+                                <span>How are you related</span>
                             </div>
                         </div>
                         <div class="message">
-                            <p>Hi, Therese! Happy Birthday! 🥳Grateful to have you as a teammate and friend. Wishing you’ll have all the good things in life because dasurv! Love you, sis ❤️</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor, libero vitae
+                                lobortis maximus</p>
                         </div>
                     </div>
-                    <!-- CED CABATBAT -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_Ced.jpg" alt="">
+                            <img src="images/DP_None.png" alt="">
                             <div class="user-name">
-                                <h4>Ced Cabatbat</h4>
-                                <span>Loyal Customer</span>
+                                <h4>Juan Pedro</h4>
+                                <span>How are you related</span>
                             </div>
                         </div>
                         <div class="message">
-                            <p>Eyyy geng geng! It'z yo bday 2day. Arigathanks for all the life advices!! More thirdwheeling days for me pag nagaya ule kayo ni tiw lumabas! Loyal customer pa din sa Cookies bago maging loyal sa iba 😁<br><a href="https://www.youtube.com/watch?v=tL6SQ2PGXV4" target="_blank" rel="noopener noreferrer">https://www.youtube.com/watch?v=tL6SQ2PGXV4</a></p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor, libero vitae
+                                lobortis maximus</p>
                         </div>
                     </div>
                     <div class="col reveal">
@@ -468,7 +467,7 @@
 
     <div class="bgimg-3">
         <div class="caption unselectable">
-            <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">I LOVE YOU</span>
+            <span class="border parallax-heading">Treasured Memories: A Collection of Love and Adoration from Your Dearest Ones</span>
         </div>
     </div>
     <!-- ALBUM GALLERY SECTION -->
@@ -488,7 +487,7 @@
                             </div>
                         </a>
                     </div>
-                    <p>First Official Date</p>
+                    <p class="medium-up--hide">First Official Date</p>
                     <div style="display:none">
                         <a data-fancybox="firstDate" data-caption="After pumunta kay Papa" href="images/FD2.jpeg">
                             <img src="images/FD2.jpeg" alt="" />
@@ -521,7 +520,7 @@
                             </div>
                         </a>
                     </div>
-                    <p>Great Awards</p>
+                    <p class="medium-up--hide">Great Awards</p>
                     <div style="display:none">
                         <a data-fancybox="greatAward" href="images/GA2.jpg">
                             <img src="images/GA2.jpg" alt="" />
@@ -545,7 +544,7 @@
                             </div>
                         </a>
                     </div>
-                    <p>Very College</p>
+                    <p class="medium-up--hide">Very College</p>
                     <div style="display:none">
                         <a data-fancybox="verycollege" href="images/College2.jpg">
                             <img src="images/College2.jpg" alt="" />
@@ -578,52 +577,12 @@
                             </div>
                         </a>
                     </div>
-                    <p>By Ced Cute</p>
+                    <p class="medium-up--hide">By Ced Cute</p>
                     <!-- <div style="display:none">
                         <a data-fancybox="cedxbanner" data-caption="When kaya ulit???" href="images/College3.jpg">
                             <img src="images/College3.jpg" alt="" />
                         </a>
                     </div> -->
-                </div>
-                <div id="dabarkads" class="album reveal">
-                    <div class="thumbnail">
-                        <a data-fancybox="dabarkads" href="images/dabarkads1.jpg">
-                            <img src="images/dabarkads1.jpg" width="100%" height="auto" alt="" />
-                            <div class="image-layer">
-                                <h3>Dabarkads</h3>
-                            </div>
-                        </a>
-                    </div>
-                    <p>dabarkads</p>
-                    <div style="display:none">
-                        <a data-fancybox="dabarkads" href="images/dabarkads2.jpg">
-                            <img src="images/dabarkads2.jpg" alt="" />
-                        </a>
-                        <a data-fancybox="dabarkads" href="images/dabarkads3.jpg">
-                            <img src="images/dabarkads3.jpg" alt="" />
-                        </a>
-                        <a data-fancybox="dabarkads" href="images/dabarkads4.jpg">
-                            <img src="images/dabarkads4.jpg" alt="" />
-                        </a>
-                        <a data-fancybox="dabarkads" href="images/dabarkads5.jpg">
-                            <img src="images/dabarkads5.jpg" alt="" />
-                        </a>
-                        <a data-fancybox="dabarkads" href="images/dabarkads6.jpg">
-                            <img src="images/dabarkads6.jpg" alt="" />
-                        </a>
-                        <a data-fancybox="dabarkads" href="images/dabarkads7.jpg">
-                            <img src="images/dabarkads7.jpg" alt="" />
-                        </a>
-                        <a data-fancybox="dabarkads" href="images/dabarkads8.jpg">
-                            <img src="images/dabarkads8.jpg" alt="" />
-                        </a>
-                        <a data-fancybox="dabarkads" href="images/dabarkads9.jpg">
-                            <img src="images/dabarkads9.jpg" alt="" />
-                        </a>
-                        <a data-fancybox="dabarkads" href="images/dabarkads10.jpg">
-                            <img src="images/dabarkads10.jpg" alt="" />
-                        </a>
-                    </div>
                 </div>
                 <!-- FROM NEGGYTOT -->
                 <div id="neggy" class="album reveal">
@@ -635,13 +594,14 @@
                             </div>
                         </a>
                     </div>
-                    <p>Fr: Neggy</p>
+                    <p class="medium-up--hide">Neggy</p>
                     <!-- <div style="display:none">
                         <a data-fancybox="neggy" data-caption="When kaya ulit???" href="images/College3.jpg">
                             <img src="images/College3.jpg" alt="" />
                         </a>
                     </div> -->
                 </div>
+
             </div>
         </div>
     </div>
@@ -649,7 +609,7 @@
     <div class="bgimg-1">
         <div class="caption unselectable">
             <div class="border-caption">
-                <span class="border">MWAH!</span>
+                <span class="border">I LOVE YOU!</span>
             </div>
         </div>
     </div>
@@ -663,7 +623,6 @@
         Fancybox.bind('[data-fancybox="verycollege"]', {});
         Fancybox.bind('[data-fancybox="cedxbanner"]', {});
         Fancybox.bind('[data-fancybox="neggy"]', {});
-        Fancybox.bind('[data-fancybox="dabarkads"]', {});
     </script>
 </body>
 
